# pango-build

./: .gitignore  LICENSE  README.md  appveyor.yml  requirements.txt  versions.json
.github/workflows/: build-linux.yml  build-win.yml  build.yml  main.yml  test.yml
cairo-build/: meson.build
ci/: download.ps1  linux-build.py
ci/win/: build.ps1  download.ps1
pango-build/: meson.build
pango-build/subprojects/: cairo.wrap  fribidi.wrap  gperf.wrap  harfbuzz.wrap  pango.wrap
pango-build/subprojects/packagefiles/: cairo-win32-static.diff
pkgconf-build/: meson.build
updator/: check_update.py  commit.py  dependency.yml  main.py  requirements.txt  version_filters.py
